# benchScale

./: .dockerignore  .gitignore  AUDIT_ACTION_ITEMS_DEC_27_2025.md  BIOMEOS_GAPS_RESPONSE.md  BIOMEOS_INTEGRATION.md  CHANGELOG.md  CLOUD_INIT_VALIDATION_IMPLEMENTED.md  COMPREHENSIVE_AUDIT_REPORT_DEC_27_2025.md  CONTEXT.md  COVERAGE_GOAL_ACHIEVED.md  COVERAGE_MILESTONE_PHASE2.md  COVERAGE_MILESTONE_PHASE3.md  Cargo.toml  DEEP_DEBT_ELIMINATED.md  DEEP_DEBT_LIBVIRT_TESTS.md  DEEP_DEBT_SOLVED.md  DEPLOYMENT.md  Dockerfile  EVOLUTION_COMPLETE.md  FINAL_SESSION_SUMMARY.md  INTEGRATION_TEST_SUCCESS_DEC_29_2025.md  IP_POOL_WIRED_COMPLETE.md  LICENSE  LICENSE-APACHE  LICENSE-MIT  MISSION_COMPLETE.md  NETWORK_TIMEOUT_FIXED_DEC_28_2025.md  PROJECT_COMPLETE.md  README.md  REFACTORING_ROADMAP.md  RELEASE_CHECKLIST.md  RELEASE_NOTES.md  TESTING_COMPLETE.md  TEST_COVERAGE_COMPLETE.md  WORKSPACE_CLEANUP_COMPLETE.md  build.rs  create-popos-cosmic-rustdesk.sh  deny.toml  pipeline-build-and-validate.sh  tarpaulin.toml
.github/workflows/: ci.yml  release.yml
archive/: README.md
archive/docs-dec-2025/: AUDIT_ACTION_ITEMS_DEC_27_2025.md  AUDIT_EXECUTIVE_SUMMARY_DEC_27_2025.md  BENCHSCALE_EVOLUTION_COMPLETE.md  BIOME_OS_HANDOFF_COMPLETE.md  BIOME_OS_ISSUE_RESOLVED_DEC_28_2025.md  CODE_EVOLUTION_SESSION_DEC_27_2025.md  COVERAGE_MILESTONE_PHASE1.md  DEEP_DEBT_SOLUTION_FINAL.md  DEPLOYMENT_READINESS.md  DOCUMENTATION_INDEX.md  EVOLUTION_COMPLETE.md  EXAMPLES_STATUS.md  IP_POOL_IMPLEMENTATION_STATUS.md  IP_POOL_INTEGRATION_PATCH.md  ISSUE_BENCHSCALE_001_CLOUD_INIT_GAP.md  MIGRATION_GUIDE.md  POLISH_PRIORITIES.md  PRE_PUSH_VALIDATION_COMPLETE.md  PRIMAL_TOOLS_ARCHITECTURE.md  PRODUCTION_GAPS_FIXED.md  QUICKSTART.md  RACE_CONDITION_FIX.md  SESSION_INDEX.md  TESTING_AND_POLISH_SESSION.md  TEST_PLAN.md
archive/phantom-dependencies/: README.md  discovery_based_vm.rs  provider.rs
archive/rust/: cloud_init_tests.rs  image_builder_improvements.rs
archive/scripts-syntheticchemistry-era/: build-ubuntu-cosmic-rustdesk.sh  popos-cosmic-post-install.sh
docs/: DOCUMENTATION_INDEX.md
examples/: build_cosmic_image.rs  build_from_existing_improved.rs  build_working_desktop.rs  cloud_init_integration_test.rs  create_from_cosmic_template.rs  lab_status.rs  production_vm_ready.rs  vm_cleanup.rs
scripts/: README.md  create-lab.sh  deploy-ecoprimals.sh  deploy-to-lab.sh  destroy-lab.sh  run-tests.sh
scripts/archive/: download-isos-legacy.sh  run-tests-stub.sh
specs/: ARCHITECTURE.md  BENCHSCALE_EVOLUTION.md  BIOMEOS_VM_SUPPORT_REQUEST.md  DEVELOPMENT_STATUS.md  ECOPRIMALS_INTEGRATION.md  GUIDANCE.md  OVERVIEW.md  README.md  SPECIFICATION.md
src/: capabilities.rs  cloud_init.rs  cloud_init_simplified.rs  config.rs  config_legacy.rs  constants.rs  error.rs  image_builder.rs  lib.rs
src/backend/: cleanup.rs  docker.rs  health.rs  ip_pool.rs  lab.rs  libvirt.rs  libvirt_validation_tests.rs  mod.rs  senescence.rs  serial_console.rs  ssh.rs  timeout_utils.rs  vm_utils.rs  vnc_display_tests.rs
src/backend/libvirt/: backend_impl.rs  boot_diagnostics.rs  dhcp_discovery.rs  dhcp_leases.rs  health_check.rs  libvirt_validation_tests.rs  mod.rs  recovery.rs  utils.rs  vm_guard.rs  vm_lifecycle.rs  vm_ready.rs  vm_registry.rs  vm_state.rs
src/cloud_init/: tests.rs
src/config/: legacy.rs  mod.rs  monitoring.rs  network.rs  storage.rs  timeouts.rs
src/deploy/: arch.rs  mod.rs  plasmid.rs
src/image_builder/: mod.rs  pipeline.rs  stages.rs  tests.rs
src/lab/: mod.rs  registry.rs  tests.rs
src/network/: mod.rs
src/persistence/: lifecycle.rs  mod.rs  registry.rs  state.rs
src/scenarios/: mod.rs
src/server/: methods.rs  mod.rs
src/tests/: mod.rs
src/topology/: mod.rs  tests.rs
src/validation/: ipc_compliance.rs  mod.rs
tests/: critical_e2e.rs  evolution_integration_tests.rs  image_builder_e2e.rs  integration_test.rs  integration_tests.rs  libvirt_e2e_tests.rs  persistence_e2e_tests.rs  rustdesk_e2e.rs
topologies/: biomeos-p2p-test.yaml  ecoprimals-agentic-fieldmouse.yaml  ecoprimals-agentic-tower.yaml  ecoprimals-albatross-multiplex.yaml  ecoprimals-alpine-minimal.yaml  ecoprimals-constrained-256m.yaml  ecoprimals-federation-10node.yaml  ecoprimals-fieldmouse-chimera.yaml  ecoprimals-gaming-mesh.yaml  ecoprimals-ionic-2family.yaml  ecoprimals-metallic-fleet.yaml  ecoprimals-mixed-arch-cluster.yaml  ecoprimals-neuromorphic-edge.yaml  ecoprimals-nucleus-3node.yaml  ecoprimals-organo-metal-salt.yaml  ecoprimals-readonly-fs.yaml  ecoprimals-skunkbat-defensive.yaml  ecoprimals-storytelling-minimal.yaml  ecoprimals-storytelling-tower.yaml  ecoprimals-tower-2node-tcp.yaml  ecoprimals-tower-2node.yaml  ecoprimals-wan-federation.yaml  nat-traversal.yaml  network-presets.yaml  nuc-validation.yaml  p2p-3-tower.yaml  simple-lan.yaml
wateringHole/: README.md
wateringHole/handoffs/: BENCHSCALE_ECOPRIMALS_INTEGRATION_HANDOFF_MAR28_2026.md
