[package]
name = "benchscale"
version = "3.0.0"
edition = "2024"
authors = ["ecoPrimals <dev@ecoprimals.org>"]
license = "AGPL-3.0-or-later"
description = "A pure Rust laboratory substrate for distributed system testing"
repository = "https://github.com/ecoPrimals/benchScale"
keywords = ["testing", "distributed", "docker", "containers", "laboratory"]
categories = ["development-tools::testing", "network-programming"]

[workspace]
# Standalone project — independently versioned within ecoPrimals/infra

[dependencies]
# Docker API client (pure Rust)
bollard = "0.17"

# Async runtime
tokio = { version = "1.35", features = ["full"] }
async-trait = "0.1"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_yaml = { package = "yaml_serde", version = "0.10" }
serde_json = "1.0"

# Error handling
anyhow = "1.0"
thiserror = "2.0"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Network utilities
ipnetwork = "0.20"

# Utilities
libc = "0.2"
nix = { version = "0.29", features = ["signal"] }
virt = "0.3"
uuid = { version = "1.6", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
futures-util = "0.3"
tar = "0.4"
toml = "0.8"
dirs = "5.0"

# SSH client (for libvirt backend)
russh = { version = "0.58", optional = true }
russh-keys = { version = "0.48", optional = true }
data-encoding = { version = "2.6", optional = true }

# Persistence (for lifecycle management)
sqlx = { version = "0.8", features = ["runtime-tokio-rustls", "sqlite"], optional = true }

# CLI
clap = { version = "4.5", features = ["derive"] }

# Discovery: Use standard solutions (mDNS, DNS-SD, Consul)
# NOT creating custom substrate - primal philosophy is to use existing capabilities
# For service discovery, consumers should use:
# - mDNS/DNS-SD for local network discovery
# - Consul for distributed service discovery
# - Environment variables for explicit configuration

[dev-dependencies]
tokio-test = "0.4"
tempfile = "3.8"

[lib]
name = "benchscale"
path = "src/lib.rs"

[[bin]]
name = "benchscale"
path = "src/bin/main.rs"

[build-dependencies]

[features]
default = ["docker", "docker-hardened-catalog"]
docker = []
# Built-in docker.io/dockerhardened/* short-name mappings; disable to require full refs or env overrides only
docker-hardened-catalog = []
hardened = []  # Use Docker hardened images
libvirt = ["dep:russh", "dep:russh-keys", "dep:data-encoding"]  # Libvirt/KVM backend for VM testing
persistence = ["dep:sqlx"]  # VM lifecycle persistence and state management

